# BoothsBrisket

./: .gitignore  BearGame.h  CMakeLists.txt  Color.h  Constants.h  GroupName.h  Line.h  Point.h  PsuedoCode  SDL_Plotter.cpp  SDL_Plotter.h  Team.h  Tiger.bmp.txt  Title.bmp.txt  Token.h  bensNotes  main.cpp  manwins.bmp.txt  teams.bmp.txt
